--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,8 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  admin_review:
+    status:
+      todo: "A Faire"
+      valid: "Validé"
+      error: "Erreur"
