add translation for housing enum and breakfast

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -7,3 +7,13 @@ fr:
           todo: "A Faire"
           accepted: "Validé"
           error: "Erreur"
+      housing:
+        housing_types:
+          hotel: "Hotel"
+          air_bnb_shared: "AirBnB partagé"
+          air_bnb_full: "AirBnB complet"
+          cottage: "Chalet"
+          other: "Autre"
+        breakfast:
+          true: "Présent"
+          false: "Absent"
